src/test/resources/valid/Invariant3.sc
/* (c) https://github.com/MontiCore/monticore */
statechart Invariant3 {
  state Foo [b];
}