src/test/resources/invalid/InvalidParamName.sc
/* (c) https://github.com/MontiCore/monticore */
statechart InvalidEventName {
  initial state Foo;
  
  event String bar( String A, int b, a.b.Person p)  ;
}